--- a/index.html
+++ b/index.html
@@ -1,45 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sammourita</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Changa:wght@600;700&display=swap" rel="stylesheet">   
-<link rel="stylesheet" href="styles.css"> 
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-</head>
-<body>
-    <div class="main" data-aos="zoom-in" data-aos-duration="800">
-        <h1 >
-            
-            خليل سمور
-            <br>
-            <div data-aos="fade-up" data-aos-delay="300">
-            <a href="https://twitter.com/khalilsammour2" class="btn btn-outline-primary">Twitter</a>
-            <a href="https://www.instagram.com/sammmourita/" class="btn btn-outline-primary">Instagram</a>
-            <a href="mailto: khalil.almortada@hotmail.com" class="btn btn-outline-primary" >Email Me</a>
-            <a href="https://www.youtube.com/channel/UCoKu4qXk0MkmhN-0p1X3Dlw?view_as=subscriber" class="btn btn-outline-danger" style="text-shadow: none;">Youtube</a>
-            <a href="https://www.linkedin.com/in/khalil-sammour-3186b0205/" class="btn btn-outline-primary">LinkedIn</a>
-            <a href="https://www.facebook.com/khalil.sammour.58/" class="btn btn-outline-primary">facebook</a>
-            <a href="https://www.tiktok.com/@khalilsammour?lang=en" class="btn btn-outline-primary">TikTok</a>
-            <br>
-        </h1>
-        <div class="footer">
-            <p class="footer-text">  Peronal Blog Website-Made in 5 Minutes</p>
-        </div>
-    </div>
-
-</body>
-<script>
-    AOS.init();
-</script>
-</html>
+<iframe
+  src="https://drive.google.com/file/d/1rHPlf3fORTBAvr6iUCTTZWUCqLmSu4sm/preview"
+  width="640"
+  height="480"
+  allow="autoplay"
+></iframe>
+<style>
+  * {
+    margin: 0;
+  }
+  iframe {
+    width: 100%;
+  }
+</style>
