--- a/index.html
+++ b/index.html
@@ -1,15 +1,44 @@
-<iframe
-  src="https://drive.google.com/file/d/1rHPlf3fORTBAvr6iUCTTZWUCqLmSu4sm/preview"
-  width="640"
-  height="480"
-  allow="autoplay"
-></iframe>
-<style>
-  * {
-    margin: 0;
-  }
-  iframe {
-    width: 100%;
-    height: 100vh;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>أقوى موقع بالشرق الأوسط</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Aref+Ruqaa:wght@400;700&family=Changa:wght@200;700;800&family=Noto+Kufi+Arabic&family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h1 style="text-align: center">أقوى موقع في الشّرق الأوسط</h1>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/aiQ95tRKeys"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+  </body>
+  <style>
+    * {
+      margin: 0;
+      font-family: "Changa", sans-serif;
+    }
+    h1 {
+      text-align: center;
+      position: fixed;
+      left: 30%;
+      color: white;
+      top: 50vh;
+    }
+    iframe {
+      width: 100%;
+      height: 100vh;
+    }
+  </style>
+</html>
