--- a/index.html
+++ b/index.html
@@ -13,29 +13,25 @@
     />
   </head>
   <body>
-    <h1 style="text-align: center">أقوى موقع في الشّرق الأوسط</h1>
-    <iframe
-      width="560"
-      height="315"
-      src="https://www.youtube.com/embed/aiQ95tRKeys"
-      title="YouTube video player"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-    ></iframe>
+    <h1>This is my website</h1>
+    <br />
+    <h2>i am khalil</h2>
+    <br />
+    <h3>
+      just wanted to say,we can change the world by our ideas,we need to think
+      bigger only,and be desciplined
+    </h3>
+    <br />
+    <h4>this is what i believe in</h4>
+    <br />
+    <h5>thank you</h5>
   </body>
   <style>
     * {
       margin: 0;
       font-family: "Changa", sans-serif;
     }
-    h1 {
-      text-align: center;
-      position: fixed;
-      left: 30%;
-      color: white;
-      top: 50vh;
-    }
+
     iframe {
       width: 100%;
       height: 100vh;
