--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Anton&family=Aref+Ruqaa:wght@400;700&family=Changa:wght@200;700;800&family=Noto+Kufi+Arabic&family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7501905047099026"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>This is my website</h1>
